--- a/css/exercice.css
+++ b/css/exercice.css
@@ -7,24 +7,146 @@
 
 /* 2. exercice-order-1 */
 
+.exercice-order-1 .container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.exercice-order-1 .element-blue {
+    order: 6;
+}
+
+.exercice-order-1 .element-gray {
+    order: 5;
+}
+ 
+.exercice-order-1 .element-pink {
+    order: 4;
+}
+
+.exercice-order-1 .element-yellow {
+    order: 3;
+}
+
+.exercice-order-1 .element-green {
+    order: 2;
+}
+
 
 /* 3. exercice-order-2 */
+.exercice-order-2 .container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.exercice-order-2 .element-green {
+    order: 6;
+}
+
+.exercice-order-2 .element-yellow {
+    order: 5;
+}
+
+.exercice-order-2 .element-pink {
+    order: 4;
+}
+
+.exercice-order-2 .element-gray {
+    order: 3;
+}
+
+.exercice-order-2 .element-red {
+    order: 2;
+}
+
+.exercice-order-2 .element-blue {
+    order: 1;
+}
 
 
 /* 4. exercice-order-3 */
-
+.exercice-order-3 .container {
+    display: flex;
+  flex-direction: row;
+}
 
 /* 5. exercice-align-self-1*/
-
-
+.exercice-align-self-1 .container {
+    display: flex;
+    flex-direction: row-reverse;
+}
+.exercice-align-self-1  .element-yellow {
+    align-self: flex-end;
+}
 /* 6. exercice-align-self-2*/
+.exercice-align-self-2 .container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.exercice-align-self-2 .element-blue {
+    align-self: flex-start;
 
+}
+.exercice-align-self-2 .element-yellow {
+    align-self: flex-end;
+}
 
 /* 7. exercice-all-in-1 */
 
+.exercice-all-in-1 .container {
+display: flex;
+align-items: center;
+flex-direction: column;
+justify-content: space-around;
+}
+
+.exercice-all-in-1 .element-blue {
+    align-self: flex-start;
+}
+
+.exercice-all-in-1 .element-blue {
+    order: 1;
+}
+
+.exercice-all-in-1 .element-green {
+    order: 3;
+} 
+
+.exercice-all-in-1 .element-red {
+    order: 2;
+} 
 
 /* 8. exercice-all-in-2 */
 
+.exercice-all-in-2 .container {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.exercice-all-in-2 .element-green {
+    order: 2;
+}
+
+.exercice-all-in-2 .element-pink {
+    order: 3;
+    align-self: flex-start;
+}
+
+.exercice-all-in-2 .element-blue {
+    order: 4;
+}
 
 /* 8. exercice-margin-auto */
+
+.exercice-margin-auto .container {
+    display: flex;
+
+}
+.exercice-margin-auto .element-red {
+    margin: auto;
+}
 
